--- a/manu.html
+++ b/manu.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>My sixth THE BIG Yes John cena page</h1>
+<h1>My sixth final THE BIG Yes John cena page</h1>
 
 <?php
 echo "Hello World!";
