--- a/manu.html
+++ b/manu.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1>Manu jayi??  ...sgdghdsagh</h1>
-
-<?php
-echo "Hello World!";
-?> 
-
-</body>
-</html>
+<b>Bro how r u??</b>
